--- a/AB_/WebContent/WEB-INF/web.xml
+++ b/AB_/WebContent/WEB-INF/web.xml
@@ -9,6 +9,15 @@
   	<filter-name>EncodingFilter</filter-name>
   	<url-pattern>/*</url-pattern>
   </filter-mapping>
+   
+  <filter>
+  	<filter-name>authorityControl</filter-name>
+  	<filter-class>com.itheima.web.filter.authorityControl</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>authorityControl</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
   <servlet>
     <description></description>
     <display-name>BaseServlet</display-name>
